# c3d

./: .gitignore  CMakeLists.txt  README.md  gl_hello_world.cpp  gl_phong_light.cpp  gl_skybox.cpp  main.c  simple_rasterizer.c
include/: shader.h
libs/gfx/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
opengl/: CMakeLists.txt  Makefile  hello_world  hello_world.cpp  phong_light.cpp
opengl/include/: delta.h  input.h  object.h  shader.h  window.h
opengl/shaders/: fsh_phong.glsl  fsh_simple.glsl  vsh_phong.glsl
opengl/src/: input.cpp  object.cpp  shader.cpp  window.cpp
resterizer/: main.c
shaders/: fsh_phong.glsl  vsh_simple.glsl
src/: shader.cpp
